--- a/App.config
+++ b/App.config
@@ -6,8 +6,11 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=172.17.16.125;Initial Catalog=RBIS;User ID=RBIS;Password=Nvsuojt_2025;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
-        <add name="pgso.Properties.Settings.BRIS_EXPERIMENT_3_0ConnectionString" connectionString="Data Source=172.17.16.125;Initial Catalog=RBIS;User ID=RBIS;Password=Nvsuojt_2025;Encrypt=False;TrustServerCertificate=True" providerName="System.Data.SqlClient"/>
+        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=172.17.16.125;Initial Catalog=RBIS;User ID=RBIS;Password=Nvsuojt_2025;Encrypt=False;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+        <add name="pgso.Properties.Settings.BRIS_EXPERIMENT_3_0ConnectionString"
+            connectionString="Data Source=172.17.16.125;Initial Catalog=RBIS;User ID=RBIS;Password=Nvsuojt_2025;Encrypt=False;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
@@ -43,10 +46,10 @@
   <userSettings>
     <pgso.Properties.Settings>
       <setting name="Savedusername" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="Savedusertype" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="RememberMe" serializeAs="String">
         <value>False</value>
@@ -55,19 +58,19 @@
         <value>False</value>
       </setting>
       <setting name="RememberedUsername" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="RememberedUsertype" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="RememberMeChecked" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="Saveusertype" serializeAs="String">
-        <value/>
+        <value />
       </setting>
       <setting name="setting" serializeAs="String">
-        <value/>
+        <value />
       </setting>
     </pgso.Properties.Settings>
   </userSettings>
