--- a/App.config
+++ b/App.config
@@ -6,7 +6,7 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=172.17.16.125;Initial Catalog=RBIS;User ID=RBIS;Password=Nvsuojt_2025;Encrypt=False;TrustServerCertificate=True"
+        <add name="pgso.Properties.Settings.strCon" connectionString="Data Source=172.17.16.125;Initial Catalog=RBIS;User ID=RBIS;Password=Nvsuojt_2025;Encrypt=False"
             providerName="System.Data.SqlClient" />
         <add name="pgso.Properties.Settings.BRIS_EXPERIMENT_3_0ConnectionString"
             connectionString="Data Source=172.17.16.125;Initial Catalog=RBIS;User ID=RBIS;Password=Nvsuojt_2025;Encrypt=False;TrustServerCertificate=True"
